<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- set app_name -->
    <string name="app_name" translatable="false">Viewer App</string>

    <string name="Register"><u>Sign Up</u></string>
    <string name="SignIn">Sign In</string>
    <string name="Password">Password</string>
    <string name="Email">Username</string>
    <string name="PasswordHint">Password</string>
    <string name="ConfirmTitle">Confirm Password</string>
    <string name="Confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="question_Select" tools:ignore="MissingTranslation" translatable="false">Do you want to delete the selected items?</string>

    <string name="cancel" tools:ignore="MissingTranslation" translatable="false">Cancel</string>
    <string name="ID">ID</string>
    <string name="AddDevice">Add Device</string>
    <string name="title_activity_map_location">Map</string>

    <!-- set name Toolbar -->
    <string name="SMS_HISTORY">SMS</string>
    <string name="CALL_HISTORY">Calls</string>
    <string name="LOCATION_HISTORY">Locations</string>
    <string name="URL_HISTORY">Browser History</string>
    <string name="CONTACT_HISTORY">Contacts</string>
    <string name="CONTACT_DETAIL_HISTORY" translatable="false">Contact Details</string>
    <string name="PHOTO_HISTORY">Photos</string>
    <string name="APPLICATION_USAGE">App Activity</string>
    <string name="APPLICATION_INSTALL" translatable="false">App Installed</string>
    <string name="PHONE_CALL_RECORDING">Call Recording</string>
    <string name="AMBIENT_RECORDING" translatable="false">Ambient Recording</string>
    <string name="WHATSAPP_HISTORY">WhatsApp</string>
    <string name="VIBER_HISTORY">Viber</string>
    <string name="FACEBOOK_HISTORY">Messenger</string>
    <string name="SKYPE_HISTORY">Skype</string>
    <string name="NOTES_HISTORY">Notes</string>
    <string name="VIDEO_HISTORY">Video</string>
    <string name="VOICE_MEMOS">Voice Memos</string>
    <string name="AMBIENT_VOICE_RECORDING">Voice Recording</string>
    <string name="KEYLOGGER_HISTORY">Keylogger</string>
    <string name="HANGOUTS_HISTORY">Hangouts</string>
    <string name="BBM_HISTORY">BBM</string>
    <string name="APP_INSTALL" translatable="false">App Installed</string>
    <string name="CALENDAR_HISTORY" translatable="false">Calendar diary</string>
<!--    <string name="WIFI_HISTORY" translatable="false">Wi-Fi Logger</string>-->
    <string name="Alert_HISTORY" translatable="false">Alert</string>
    <string name="CLIPBOARD_HISTORY" translatable="false">Clipboard History</string>
    <string name="LINE_HISTORY">LINE</string>
    <string name="KIK_HISTORY">KIK</string>
    <string name="INSTAGRAM_HISTORY" translatable="false">Instagram</string>
    <string name="NETWORK_HISTORY" translatable="false">Wi-Fi Logger</string>

    <string name="YOUTUBE_HISTORY" translatable="false">YouTube History</string>
    <string name="NOTIFICATION_HISTORY" translatable="false">Notification History</string>

    <string name="ContactInformation">Contact Information</string>
    <string name="Subject">Subject</string>
    <string name="Message">Message</string>
    <string name="SendLogFile">Send Log File</string>
    <string name="SendFeedBack">SEND FEEDBACK</string>
    <string name="LogViewer">Log viewer</string>
    <string name="AccessCode">Access Code</string>

    <string name="Change_AccessCode" translatable="false">Change the access code</string>
    <string name="Note_AccessCode">Make a call with  this number to show/hide Icon of Application.</string>
    <string name="Note_Access">Note: the access code must start with # and end with *</string>
    <string name="Save">OK</string>
    <string name="PhoneNumberCall">Phone Number</string>
    <string name="MakeACall">Make A Call</string>
    <string name="SendMessages">Send Messages</string>
    <string name="ShareContact">Share Contact</string>
    <string name="AddFavorites">Add Favorites</string>
    <string name="BlockThisCaller">Block this Caller</string>
    <string name="CopyNumber">Copy number</string>
    <string name="DeviceOS">Device OS</string>
    <string name="TargetVersion">Target App Version</string>
    <string name="LastSync">Last Sync</string>
    <string name="Status" tools:ignore="MissingTranslation">Status</string>
    <string name="AdvantedOption">ADVANCED OPTIONS</string>
    <string name="SaveBattery">Save Battery</string>
    <string name="GPSInterval">GPS Interval</string>
    <string name="minutes"> minute(s)</string>
    <string name="meters" translatable="false"> meters</string>
    <string name="RemoveDevice">Remove Device</string>
    <string name="x_minutes">%1$d minute(s)</string>
    <string name="Version">Version</string>
    <string name="ExpiryDate">Expiry date: </string>
    <string name="DeviceList">Device List</string>
    <string name="YouHaveLinkedDevice" tools:ignore="MissingTranslation">You have %1$d device(s) linked to this account.</string>
    <string name="LogOut">Sign Out</string>
    <string name="SignOut" tools:ignore="MissingTranslation" translatable="false">Do you want to Sign out of this account?</string>
    <string name="AboutUs"><u>About</u></string>
    <string name="ForgetPassword"><u>Forget Password ?</u></string>
    <string name="Language"><u>Language ?</u></string>
    <string name="SaveAndSync">Save &amp; Sync</string>
    <string name="SaveAndSync_NotSave" translatable="false">The data of this device %s has not been saved to memory! Please turn on the internet and go back to the app to save the data.</string>
    <string name="SyncSetting" translatable="false">Settings</string>
    <string name="Loading">Loading</string>
    <string name="NoData">No data to display.</string>
    <string name="JustAMoment">Just a moment</string>
    <string name="Open" translatable="false">Open</string>
    <string name="Close" translatable="false">Close</string>
    <string name="Disconnect" translatable="false">Disconnect</string>
    <string name="Connect" translatable="false">Connect</string>
    <string name="JustMinutesAgo" tools:ignore="MissingTranslation">Just %1$d minutes ago</string>
    <string name="TurnOn">No internet access!</string>
    <string name="Maximum_Download" tools:ignore="MissingTranslation" translatable="false">The app can only load up to 5 images at a time.</string>
    <string name="Image_Downloading" translatable="false">The image is saved.</string>
    <string name="Image_Download_Failed" translatable="false">Image %s cannot be downloaded!</string>
    <string name="Image_Downloaded" translatable="false">All images have been downloaded.</string>
    <string name="Renew"><u>Renew</u></string>
    <string name="NoDevice">No account does not have any devices linked.</string>
    <string name="addedOn">Added on</string>
    <string name="gps_status" translatable="false">GPS Status</string>
    <string name="delete">Deleting</string>
    <string name="Transfer_multimedia_data" translatable="false" tools:ignore="MissingTranslation">Transfer multimedia data:</string>
    <string name="Force_opening_internet" translatable="false" tools:ignore="MissingTranslation">Force opening internet connection</string>
    <string name="Auto_Turn_ON_Wifi" translatable="false" tools:ignore="MissingTranslation">Auto Turn ON Wifi/Edge/3G...If Needs</string>
    <string name="sync_Data_Every" translatable="false" tools:ignore="MissingTranslation">Sync data every</string>
    <string name="sync_Distance_Filter" translatable="false">Distance Filter</string>
    <string name="auto_turn_on_wifi" translatable="false">Auto Turn ON Wifi If Needs</string>
    <string name="force_opening_internet" translatable="false">Force opening internet connection:</string>

    <string name="download_more" translatable="false">Load\n more</string>
    <string name="map_type" translatable="false">Map type</string>
    <string name="normal" translatable="false">Normal</string>
    <string name="terrain" translatable="false">Terrain</string>
    <string name="satellite" translatable="false">Satellite</string>
    <string name="title_activity_maps_activityqw" translatable="false">Map</string>

    <string name="get_gps_now" translatable="false">Get GPS Now</string>
    <string name="play_ambient" translatable="false">Play</string>
    <string name="take_a_photo_font" translatable="false">Take a photo front </string>
    <string name="take_a_photo_back" translatable="false">Take a photo back</string>
    <string name="seconds_30" translatable="false">30 seconds</string>
    <!--Device is currently offline or location is off!-->
    <string name="current_position" translatable="false">Current Position</string>
    <string name="device_offline" translatable="false">The device is currently offline or the location is off!</string>
    <string name="device_offline_photo" translatable="false">The device is currently offline or the Photo History feature is not enabled!</string>
    <string name="to_complete" translatable="false">Complete %1$d</string>
    <string name="done" translatable="false">Done</string>
    <string name="completed" translatable="false">Completed</string>
    <string name="seconds" translatable="false"> Seconds</string>
    <string name="live_now" translatable="false">Live Now</string>
    <string name="the_target_is_offline" translatable="false">The device is offline now (Maybe your device is in sleep mode).</string>
    <string name="the_target_is_offline_photo" translatable="false">Maybe your device is in sleep mode or you haven\'t enabled Photo History feature in Sync Settings.</string>
    <string name="the_target_is_offline_location" translatable="false">Maybe your device is in sleep mode or you have not enabled GPS History feature in Sync Settings.</string>
    <string name="the_target_s_device_is_currently_offline" translatable="false">The target\'s device is in sleep mode or the app has been uninstalled from the target device!</string>

</resources>
