<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#fff"
    android:layout_height="match_parent"
    tools:context=".View.AccessCode">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar_AccessCode"
        app:contentInsetStartWithNavigation="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textColor="@color/bgToolbar"
        android:gravity="center_horizontal"
        android:text="@string/Change_AccessCode"
        android:layout_marginBottom="10dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="9dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:clickable="false"
        android:id="@+id/btn_Device"
        app:cardBackgroundColor="#fff"
        app:cardUseCompatPadding="true"
        app:cardElevation="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text=""
            android:id="@+id/edt_AccessCode"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:paddingStart="10dp"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:paddingBottom="3dp"
        android:text="@string/Note_AccessCode"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:layout_width="match_parent"
        android:textColor="#000"
        android:paddingStart="10dp"
        android:layout_height="wrap_content"
        android:text="@string/Note_Access"
        tools:ignore="RtlSymmetry" />


    <Button
        android:layout_width="wrap_content"
        android:text="@string/Save"
        android:textColor="#fff"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:id="@+id/btn_Save_AccseesCode"
        android:layout_gravity="center_horizontal"
        android:background="#4dcc01"
        android:textAllCaps="false"
        android:layout_height="wrap_content" />

</LinearLayout>